--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==5.2.*
 pre-commit
 aiohttp==3.11.*
 requests==2.32.*
+opening-hours-py==1.1.3
+django-countries==7.6.1
 django-ninja==1.4.*
 python-dotenv==1.0.1
 django-solo==2.4.0
