--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ opening-hours-py==1.1.3
 django-countries==7.6.1
 django-ninja==1.4.*
 python-dotenv==1.0.1
+psycopg2==2.9.10
 django-solo==2.4.0
 python-dateutil
 pytz
