--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,38 @@
+[project]
+name = "evmap-backend"
+version = "0.1.0"
+requires-python = ">=3.12"
+dependencies = [
+    "Django==5.2.*",
+    "aiohttp==3.11.*",
+    "requests==2.32.*",
+    "opening-hours-py==1.1.*",
+    "django-countries==7.6.*",
+    "django-ninja==1.4.*",
+    "python-dotenv==1.0.*",
+    "psycopg2==2.9.*",
+    "django-solo==2.4.*",
+    "python-dateutil",
+    "pytz",
+    "tqdm",
+    "defusedxml",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit",
+    "pytest==9.0.*",
+    "pytest-django==4.11.*",
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["evmap_backend"]
+namespaces = false
+
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "tests.settings"
+testpaths = ["src/tests"]
