update supervisord.conf for nobil realtime data

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -25,7 +25,7 @@ user=root
 directory=/app
 
 [program:nobil_realtime]
-command=/usr/local/bin/python src/manage.py nobil_realtime_api
+command=/usr/local/bin/python src/manage.py stream_data_source nobil_realtime
 autostart=true
 autorestart=true
 priority=5
